--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "aiz-packages/combination-generate",
-    "description": "Generate combinations of items in multiple arrays",
+    "name": "yuuuu9658/combination-generate",
+    "description": "Nothing but dangerous",
     "type": "library",
     "license": "MIT",
     "autoload": {
@@ -10,8 +10,8 @@
     },
     "authors": [
         {
-            "name": "Shifat Hossain",
-            "email": "amithassan3229@gmail.com"
+            "name": "Yuuuu9658",
+            "email": "gty0211@gmail.com"
         }
     ],
     "minimum-stability": "dev",
